@@ -34,7 +34,7 @@ class Methods extends Controller
 	{
 		parent::__construct($container, $config);
 
-		$this->setPredefinedTaskList(['main', 'display', 'dontshowthisagain', 'disable']);
+		$this->setPredefinedTaskList(['main', 'dontshowthisagain', 'disable']);
 		$this->cacheableTasks = [];
 		$this->userCaching = 2;
 	}
@@ -107,7 +107,7 @@ class Methods extends Controller
 		}
 
 		// Redirect
-		$url       = JRoute::_('index.php?option=com_loginguard&view=Methods&task=display&user_id=' . $user_id, false);
+		$url       = JRoute::_('index.php?option=com_loginguard&view=Methods&user_id=' . $user_id, false);
 		$returnURL = $this->input->getBase64('returnurl');
 
 		if (!empty($returnURL))
