@@ -2,6 +2,7 @@
 Akeeba LoginGuard 3.3.5
 ================================================================================
 ~ Replace zero datetime with nullable datetime (gh-94)
+# [LOW] You can see, but not use, the Methods page as a guest (gh-95)
 
 Akeeba LoginGuard 3.3.4
 ================================================================================
